update XGboost results

--- a/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -436,20 +436,20 @@
       "Majority baselines are the same: True\n",
       "                                  Model/Baseline Accuracy  \\\n",
       "0                                     Altman's Z   0.3855   \n",
-      "0                 Financial Variables and Sector   0.8980   \n",
-      "0  Financial Variables, Sector, and NLP Features   0.8157   \n",
+      "0                 Financial Variables and Sector   0.7630   \n",
+      "0  Financial Variables, Sector, and NLP Features   0.9034   \n",
       "0                              Majority Baseline   0.3247   \n",
       "\n",
       "  Weighted Average Precision Weighted Average Recall F1 Score  \\\n",
-      "0                     0.3468                  0.3855   0.3408   \n",
-      "0                     0.8975                  0.8980   0.8962   \n",
-      "0                     0.8167                  0.8157   0.8131   \n",
+      "0                       0.35                    0.39   0.3408   \n",
+      "0                       0.77                    0.76   0.7575   \n",
+      "0                       0.90                    0.90   0.9017   \n",
       "0                                                               \n",
       "\n",
       "  Share $\\le$ 1 Rating From Actual  \n",
       "0                           0.7657  \n",
-      "0                           0.9848  \n",
-      "0                           0.9705  \n",
+      "0                           0.9597  \n",
+      "0                           0.9857  \n",
       "0                                   \n",
       "exact predictions share == accuracy: True\n",
       "exact predictions share == accuracy: True\n",
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -538,32 +538,32 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           A     0.7905    0.7981    0.7943       208\n",
-      "          AA     0.8182    0.5192    0.6353        52\n",
-      "         AAA     0.8571    0.7500    0.8000        24\n",
-      "           B     0.8923    0.7532    0.8169       154\n",
-      "          BB     0.8219    0.8451    0.8333       284\n",
-      "         BBB     0.8000    0.8815    0.8388       363\n",
-      "           C     1.0000    1.0000    1.0000         4\n",
-      "          CC     0.0000    0.0000    0.0000         2\n",
-      "         CCC     0.7407    0.7692    0.7547        26\n",
-      "           D     1.0000    1.0000    1.0000         1\n",
+      "         AAA       0.90      0.79      0.84        24\n",
+      "          AA       0.88      0.58      0.70        52\n",
+      "           A       0.84      0.89      0.87       208\n",
+      "         BBB       0.91      0.95      0.93       363\n",
+      "          BB       0.94      0.92      0.93       284\n",
+      "           B       0.93      0.91      0.92       154\n",
+      "         CCC       0.79      0.85      0.81        26\n",
+      "          CC       1.00      0.50      0.67         2\n",
+      "           C       1.00      1.00      1.00         4\n",
+      "           D       1.00      1.00      1.00         1\n",
       "\n",
-      "    accuracy                         0.8157      1118\n",
-      "   macro avg     0.7721    0.7316    0.7473      1118\n",
-      "weighted avg     0.8167    0.8157    0.8131      1118\n",
+      "    accuracy                           0.90      1118\n",
+      "   macro avg       0.92      0.84      0.87      1118\n",
+      "weighted avg       0.90      0.90      0.90      1118\n",
       "\n",
-      "  Rating Precision  Recall F1-Score Support\n",
-      "0      A    0.7905  0.7981   0.7943     208\n",
-      "1     AA    0.8182  0.5192   0.6353      52\n",
-      "2    AAA    0.8571  0.7500   0.8000      24\n",
-      "3      B    0.8923  0.7532   0.8169     154\n",
-      "4     BB    0.8219  0.8451   0.8333     284\n",
-      "5    BBB    0.8000  0.8815   0.8388     363\n",
-      "6      C    1.0000  1.0000   1.0000       4\n",
-      "7     CC    0.0000  0.0000   0.0000       2\n",
-      "8    CCC    0.7407  0.7692   0.7547      26\n",
-      "9      D    1.0000  1.0000   1.0000       1\n",
+      "  Rating Precision Recall F1-Score Support\n",
+      "0    AAA      0.90   0.79     0.84      24\n",
+      "1     AA      0.88   0.58     0.70      52\n",
+      "2      A      0.84   0.89     0.87     208\n",
+      "3    BBB      0.91   0.95     0.93     363\n",
+      "4     BB      0.94   0.92     0.93     284\n",
+      "5      B      0.93   0.91     0.92     154\n",
+      "6    CCC      0.79   0.85     0.81      26\n",
+      "7     CC      1.00   0.50     0.67       2\n",
+      "8      C      1.00   1.00     1.00       4\n",
+      "9      D      1.00   1.00     1.00       1\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           A     0.9604    0.9327    0.9463       208\n",
@@ -641,22 +641,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'booster': 'gbtree', 'learning_rate': 0.1, 'max_depth': 3, 'min_child_weight': 5, 'n_estimators': 100, 'objective': 'multi:softprob'}\n",
+      "{'booster': 'gbtree', 'gamma': 0.1, 'learning_rate': 0.1, 'max_depth': 20, 'min_child_weight': 5, 'n_estimators': 1000, 'objective': 'multi:softprob'}\n",
+      "XGBoost\n",
       "{'booster': 'gbtree', 'learning_rate': 0.01, 'max_depth': 3, 'min_child_weight': 3, 'n_estimators': 100, 'objective': 'multi:softprob'}\n",
-      "   Previous Ratings booster  learning_rate  max_depth  min_child_weight  \\\n",
-      "0  Exclude Previous  gbtree           0.10          3                 5   \n",
-      "0  Include Previous  gbtree           0.01          3                 3   \n",
+      "XGBoost\n",
+      "   Previous Ratings booster  gamma  learning_rate  max_depth  \\\n",
+      "0  Exclude Previous  gbtree    0.1           0.10         20   \n",
+      "0  Include Previous  gbtree    NaN           0.01          3   \n",
       "\n",
-      "   n_estimators       objective  \n",
-      "0           100  multi:softprob  \n",
-      "0           100  multi:softprob  \n"
+      "   min_child_weight  n_estimators       objective  \n",
+      "0                 5          1000  multi:softprob  \n",
+      "0                 3           100  multi:softprob  \n"
      ]
     }
    ],
@@ -675,7 +677,11 @@
     "    best_params = pd.DataFrame(best_params, index=[0])\n",
     "\n",
     "    # Set columns\n",
-    "    best_params.columns = ['booster', 'learning_rate', 'max_depth', 'min_child_weight', 'n_estimators', 'objective']\n",
+    "    print(classifier_name)\n",
+    "    if \"include_previous_\" in include_exclude_previous:\n",
+    "        best_params.columns = ['booster', 'learning_rate', 'max_depth', 'min_child_weight', 'n_estimators', 'objective']\n",
+    "    else:\n",
+    "        best_params.columns = ['booster', 'gamma','learning_rate', 'max_depth', 'min_child_weight', 'n_estimators', 'objective']\n",
     "    # Replace 'Multi-Class Strategy' values\n",
     "    #best_params['Multi-Class Strategy'] = best_params['Multi-Class Strategy'].replace({'ovr': 'One vs Rest', 'multinomial': 'Multinomial'})\n",
     "    # Replace 'Penalty' values\n",
@@ -720,46 +726,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                 Permuted Feature  Mean Accuracy Drop  \\\n",
-      "0                               Retained Earnings            0.035817   \n",
-      "1                           Market Capitalization            0.030038   \n",
-      "2                       Inventory (Balance Sheet)            0.027679   \n",
-      "3                               Sector: Utilities            0.024965   \n",
-      "4                                      Debt Ratio            0.024124   \n",
-      "5                                  Dividends Paid            0.022094   \n",
-      "6                Other Total Stockholders' Equity            0.018515   \n",
-      "7                                    Common Stock            0.017421   \n",
-      "8                        Total Non-Current Assets            0.014897   \n",
-      "9               Research and Development Expenses            0.012906   \n",
-      "10                                        Ratio E            0.012905   \n",
-      "11                           Total Current Assets            0.011080   \n",
-      "12                      Other Current Liabilities            0.010883   \n",
-      "13            Debt Ratio (Alternative Definition)            0.009271   \n",
-      "14  Weighted Average Shares Outstanding (Diluted)            0.008568   \n",
+      "                               Permuted Feature  Mean Accuracy Drop  \\\n",
+      "0                             Retained Earnings            0.043819   \n",
+      "1                         Market Capitalization            0.035169   \n",
+      "2                                Dividends Paid            0.021455   \n",
+      "3                                    Debt Ratio            0.009987   \n",
+      "4                                  Common Stock            0.009693   \n",
+      "5                                       Ratio E            0.009535   \n",
+      "6              Other Total Stockholders' Equity            0.009288   \n",
+      "7                     Total Current Liabilities            0.006888   \n",
+      "8                     Inventory (Balance Sheet)            0.006802   \n",
+      "9                          Total Current Assets            0.006684   \n",
+      "10  Selling General and Administrative Expenses            0.006031   \n",
+      "11                             Interest Expense            0.005973   \n",
+      "12                 Net Property Plant Equipment            0.005729   \n",
+      "13                                      Ratio C            0.005677   \n",
+      "14                     Total Non-Current Assets            0.005589   \n",
       "\n",
       "    Standard Deviation  \n",
-      "0             0.007043  \n",
-      "1             0.006781  \n",
-      "2             0.004675  \n",
-      "3             0.003304  \n",
-      "4             0.004996  \n",
-      "5             0.005007  \n",
-      "6             0.004804  \n",
-      "7             0.003463  \n",
-      "8             0.003718  \n",
-      "9             0.002746  \n",
-      "10            0.003910  \n",
-      "11            0.003805  \n",
-      "12            0.003305  \n",
-      "13            0.003599  \n",
-      "14            0.003388  \n",
+      "0             0.005761  \n",
+      "1             0.005735  \n",
+      "2             0.004481  \n",
+      "3             0.003413  \n",
+      "4             0.002248  \n",
+      "5             0.003463  \n",
+      "6             0.003028  \n",
+      "7             0.002785  \n",
+      "8             0.002994  \n",
+      "9             0.003243  \n",
+      "10            0.002395  \n",
+      "11            0.002740  \n",
+      "12            0.001915  \n",
+      "13            0.002476  \n",
+      "14            0.003420  \n",
       "                             Permuted Feature  Mean Accuracy Drop  \\\n",
       "0    Rating on Previous Fixed Quarter Date BB            0.276554   \n",
       "1   Rating on Previous Fixed Quarter Date BBB            0.257352   \n",
@@ -863,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -892,13 +898,13 @@
       "                                  Model/Baseline Accuracy  \\\n",
       "0                                     Altman's Z   0.8488   \n",
       "0                 Financial Variables and Sector   0.9454   \n",
-      "0  Financial Variables, Sector, and NLP Features   0.9472   \n",
+      "0  Financial Variables, Sector, and NLP Features   0.9490   \n",
       "0                              Majority Baseline   0.9535   \n",
       "\n",
       "  Weighted Average Precision Weighted Average Recall F1 Score  \n",
       "0                     0.9117                  0.8488   0.8787  \n",
       "0                     0.9112                  0.9454   0.9280  \n",
-      "0                     0.9097                  0.9472   0.9281  \n",
+      "0                     0.9089                  0.9490   0.9285  \n",
       "0                                                              \n"
      ]
     }
