--- a/Output/Modelling/XGBoost/Tables/exclude_previous_Most_Complex_Model_Permutation_Importance_Top_15.tex
+++ b/Output/Modelling/XGBoost/Tables/exclude_previous_Most_Complex_Model_Permutation_Importance_Top_15.tex
@@ -3,21 +3,21 @@
 \toprule
 Permuted Feature & Mean Accuracy Drop & Standard Deviation \\
 \midrule
-Retained Earnings & 0.035817 & 0.007043 \\
-Market Capitalization & 0.030038 & 0.006781 \\
-Inventory (Balance Sheet) & 0.027679 & 0.004675 \\
-Sector: Utilities & 0.024965 & 0.003304 \\
-Debt Ratio & 0.024124 & 0.004996 \\
-Dividends Paid & 0.022094 & 0.005007 \\
-Other Total Stockholders' Equity & 0.018515 & 0.004804 \\
-Common Stock & 0.017421 & 0.003463 \\
-Total Non-Current Assets & 0.014897 & 0.003718 \\
-Research and Development Expenses & 0.012906 & 0.002746 \\
-Ratio E & 0.012905 & 0.003910 \\
-Total Current Assets & 0.011080 & 0.003805 \\
-Other Current Liabilities & 0.010883 & 0.003305 \\
-Debt Ratio (Alternative Definition) & 0.009271 & 0.003599 \\
-Weighted Average Shares Outstanding (Diluted) & 0.008568 & 0.003388 \\
+Retained Earnings & 0.043819 & 0.005761 \\
+Market Capitalization & 0.035169 & 0.005735 \\
+Dividends Paid & 0.021455 & 0.004481 \\
+Debt Ratio & 0.009987 & 0.003413 \\
+Common Stock & 0.009693 & 0.002248 \\
+Ratio E & 0.009535 & 0.003463 \\
+Other Total Stockholders' Equity & 0.009288 & 0.003028 \\
+Total Current Liabilities & 0.006888 & 0.002785 \\
+Inventory (Balance Sheet) & 0.006802 & 0.002994 \\
+Total Current Assets & 0.006684 & 0.003243 \\
+Selling General and Administrative Expenses & 0.006031 & 0.002395 \\
+Interest Expense & 0.005973 & 0.002740 \\
+Net Property Plant Equipment & 0.005729 & 0.001915 \\
+Ratio C & 0.005677 & 0.002476 \\
+Total Non-Current Assets & 0.005589 & 0.003420 \\
 \bottomrule
 \end{tabular}
 
