--- a/Output/Modelling/XGBoost/Tables/Most_Complex_Models_Best_Params.tex
+++ b/Output/Modelling/XGBoost/Tables/Most_Complex_Models_Best_Params.tex
@@ -1,10 +1,10 @@
 \footnotesize
-\begin{tabular}{ccccccc}
+\begin{tabular}{cccccccc}
 \toprule
-Previous Ratings & booster & learning_rate & max_depth & min_child_weight & n_estimators & objective \\
+Previous Ratings & booster & gamma & learning_rate & max_depth & min_child_weight & n_estimators & objective \\
 \midrule
-Exclude Previous & gbtree & 0.10 & 3.00 & 5.00 & 100.00 & multi:softprob \\
-Include Previous & gbtree & 0.01 & 3.00 & 3.00 & 100.00 & multi:softprob \\
+Exclude Previous & gbtree & 0.100000 & 0.10 & 20.00 & 5.00 & 1,000.00 & multi:softprob \\
+Include Previous & gbtree & NaN & 0.01 & 3.00 & 3.00 & 100.00 & multi:softprob \\
 \bottomrule
 \end{tabular}
 
