--- a/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
+++ b/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
       "McNemar's Test (Exact) contingency table:\n",
       "[[633, 63], [75, 347]]\n",
       "Test results, no continuity correction:\n",
-      "pvalue      0.34911516637678097\n",
+      "pvalue      0.34911516637678025\n",
       "statistic   63.0\n"
      ]
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,12 +166,12 @@
       "3    ABC         2012-04-01                Same As Last Fixed Quarter Date   \n",
       "4    ABC         2013-01-01                Same As Last Fixed Quarter Date   \n",
       "\n",
-      "  smote_rating_change_model_2_predictions  \n",
-      "0         Same As Last Fixed Quarter Date  \n",
-      "1         Same As Last Fixed Quarter Date  \n",
-      "2         Same As Last Fixed Quarter Date  \n",
-      "3         Same As Last Fixed Quarter Date  \n",
-      "4         Same As Last Fixed Quarter Date  \n",
+      "   smote_rating_change_model_2_predictions  \n",
+      "0          Same As Last Fixed Quarter Date  \n",
+      "1  Downgrade Since Last Fixed Quarter Date  \n",
+      "2          Same As Last Fixed Quarter Date  \n",
+      "3          Same As Last Fixed Quarter Date  \n",
+      "4          Same As Last Fixed Quarter Date  \n",
       "  ticker fixed_quarter_date Change Direction Since Last Fixed Quarter Date  \\\n",
       "0   AAPL         2016-07-01                Same As Last Fixed Quarter Date   \n",
       "1   ABBV         2015-04-01                Same As Last Fixed Quarter Date   \n",
@@ -179,17 +179,17 @@
       "3    ABC         2012-04-01                Same As Last Fixed Quarter Date   \n",
       "4    ABC         2013-01-01                Same As Last Fixed Quarter Date   \n",
       "\n",
-      "  smote_rating_change_model_3_predictions  \n",
-      "0         Same As Last Fixed Quarter Date  \n",
-      "1         Same As Last Fixed Quarter Date  \n",
-      "2         Same As Last Fixed Quarter Date  \n",
-      "3         Same As Last Fixed Quarter Date  \n",
-      "4         Same As Last Fixed Quarter Date  \n",
+      "   smote_rating_change_model_3_predictions  \n",
+      "0          Same As Last Fixed Quarter Date  \n",
+      "1  Downgrade Since Last Fixed Quarter Date  \n",
+      "2          Same As Last Fixed Quarter Date  \n",
+      "3          Same As Last Fixed Quarter Date  \n",
+      "4          Same As Last Fixed Quarter Date  \n",
       "McNemar's Test (Exact) contingency table:\n",
-      "[[1056, 3], [2, 57]]\n",
+      "[[707, 76], [94, 241]]\n",
       "Test results, no continuity correction:\n",
-      "pvalue      1.0\n",
-      "statistic   2.0\n"
+      "pvalue      0.19213646543397725\n",
+      "statistic   76.0\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,12 +215,12 @@
       "3    ABC         2012-04-01                Same As Last Fixed Quarter Date   \n",
       "4    ABC         2013-01-01                Same As Last Fixed Quarter Date   \n",
       "\n",
-      "  smote_rating_change_model_2_predictions  \n",
-      "0         Same As Last Fixed Quarter Date  \n",
-      "1         Same As Last Fixed Quarter Date  \n",
-      "2         Same As Last Fixed Quarter Date  \n",
-      "3         Same As Last Fixed Quarter Date  \n",
-      "4         Same As Last Fixed Quarter Date  \n",
+      "   smote_rating_change_model_2_predictions  \n",
+      "0          Same As Last Fixed Quarter Date  \n",
+      "1  Downgrade Since Last Fixed Quarter Date  \n",
+      "2          Same As Last Fixed Quarter Date  \n",
+      "3          Same As Last Fixed Quarter Date  \n",
+      "4          Same As Last Fixed Quarter Date  \n",
       "  ticker fixed_quarter_date Change Direction Since Last Fixed Quarter Date  \\\n",
       "0   AAPL         2016-07-01                Same As Last Fixed Quarter Date   \n",
       "1   ABBV         2015-04-01                Same As Last Fixed Quarter Date   \n",
@@ -228,17 +228,17 @@
       "3    ABC         2012-04-01                Same As Last Fixed Quarter Date   \n",
       "4    ABC         2013-01-01                Same As Last Fixed Quarter Date   \n",
       "\n",
-      "  smote_rating_change_model_3_predictions  \n",
-      "0         Same As Last Fixed Quarter Date  \n",
-      "1         Same As Last Fixed Quarter Date  \n",
-      "2         Same As Last Fixed Quarter Date  \n",
-      "3         Same As Last Fixed Quarter Date  \n",
-      "4         Same As Last Fixed Quarter Date  \n",
+      "   smote_rating_change_model_3_predictions  \n",
+      "0          Same As Last Fixed Quarter Date  \n",
+      "1  Downgrade Since Last Fixed Quarter Date  \n",
+      "2          Same As Last Fixed Quarter Date  \n",
+      "3          Same As Last Fixed Quarter Date  \n",
+      "4          Same As Last Fixed Quarter Date  \n",
       "McNemar's Test (Exact) contingency table:\n",
-      "[[1056, 3], [2, 57]]\n",
+      "[[707, 76], [94, 241]]\n",
       "Test results, no continuity correction:\n",
-      "pvalue      1.0\n",
-      "statistic   2.0\n"
+      "pvalue      0.19213646543397725\n",
+      "statistic   76.0\n"
      ]
     }
    ],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
       "0   AAPL         2016-07-01     AA                                          AA\n",
       "1   ABBV         2015-04-01      A                                           A\n",
       "2   ABBV         2016-04-01      A                                           A\n",
-      "3    ABC         2012-04-01      A                                           A\n",
+      "3    ABC         2012-04-01      A                                          BB\n",
       "4    ABC         2013-01-01      A                                           A\n",
       "  ticker fixed_quarter_date Rating exclude_previous_rating_model_3_predictions\n",
       "0   AAPL         2016-07-01     AA                                          AA\n",
@@ -305,10 +305,10 @@
       "3    ABC         2012-04-01      A                                           A\n",
       "4    ABC         2013-01-01      A                                           A\n",
       "McNemar's Test (Exact) contingency table:\n",
-      "[[896, 108], [16, 98]]\n",
+      "[[834, 19], [176, 89]]\n",
       "Test results, no continuity correction:\n",
-      "pvalue      5.977466094158535e-18\n",
-      "statistic   16.0\n"
+      "pvalue      4.7996549529545174e-33\n",
+      "statistic   19.0\n"
      ]
     }
    ],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -403,9 +403,9 @@
       "3         Same As Last Fixed Quarter Date  \n",
       "4         Same As Last Fixed Quarter Date  \n",
       "McNemar's Test (Exact) contingency table:\n",
-      "[[1055, 2], [4, 57]]\n",
+      "[[1055, 2], [6, 55]]\n",
       "Test results, no continuity correction:\n",
-      "pvalue      0.6875\n",
+      "pvalue      0.2890625\n",
       "statistic   2.0\n"
      ]
     }
@@ -432,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
